--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "myweb",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "formik": "^1.5.1",
+    "material-ui": "^0.20.2",
+    "mdbreact": "^4.11.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-tabs": "^3.0.0",
+    "react-tap-event-plugin": "^3.0.3",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,6 +28,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "localhost:3001"
+  ]
 }
