--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "formik": "^1.5.1",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.11.1",
+    "passport": "^0.4.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
