--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "formik": "^1.5.1",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.11.1",
+    "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
+    "reactstrap": "^7.1.0",
     "yup": "^0.27.0"
   },
   "scripts": {
