--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "react-star-ratings": "^2.3.0",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
     "reactstrap": "^7.1.0",
